--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,43 @@
 server {
     listen 80;
-    client_max_body_size 10M;
+
+    client_max_body_size 20M;
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/;
+        client_max_body_size 20M;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/admin/;
+        client_max_body_size 20M;
+    }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
-    
+
+    location /media/ {
+        alias /app/media/;
+        autoindex on;
+    }
+
+    location /backend_static/ {
+        alias /static/;
+        autoindex on;
+    }
+
     location / {
         root /usr/share/nginx/html;
-        index  index.html index.htm;
+        index index.html index.htm;
         try_files $uri /index.html;
-      }
+    }
 
+    location /s/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/s/;
+    }
 }
