--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,13 @@
-# build env
 FROM node:21.7.1-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
-COPY . ./
+
+RUN npm install --legacy-peer-deps
+
+COPY . .
+
 RUN npm run build
-CMD cp -r build result_build
+
+CMD ["sh", "-c", "cp -r build result_build"]
