--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.3'
 services:
   backend:
     container_name: backend
@@ -13,6 +12,7 @@ services:
       - "8105:8000"
     networks:
       - foodgram_network
+
   frontend:
     container_name: foodgram-front
     build: ../frontend
@@ -20,6 +20,7 @@ services:
       - ../frontend/:/app/result_build/
     networks:
       - foodgram_network
+
   nginx:
     container_name: foodgram-proxy
     image: nginx:1.25.4-alpine
@@ -32,3 +33,20 @@ services:
       - ../docs/:/usr/share/nginx/html/api/docs/
     networks:
       - foodgram_network
+
+  db:
+    image: postgres:13.0-alpine
+    env_file: .env
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    networks:
+      - foodgram_network
+
+volumes:
+  postgres_data:
+  static:
+  media:
+
+networks:
+  foodgram_network:
+    driver: bridge
